==> SCU-Maker/Makers-/电子墨水屏/4_3inch-ePaper-示例程序/4_3inch-ePaper-demo/XNUCLEO-F103RB/src/epd.cpp <==
#include "epd.h"
#include "mbed.h"

void epd_reset(void)
{
	reset = 0;
	wait_us(10);
	reset = 1;
	wait_us(500);
	reset = 0;
	wait(3);
}

void epd_wakeup(void)
{
	wake_up = 0;
	wait_us(10);
	wake_up = 1;
	wait_us(500);
	wake_up = 0;
	wait_ms(10);
}

void epd_set_baud(long baud)
{
	_cmd_buff[0] = FRAME_B;
	
	_cmd_buff[1] = 0x00;
	_cmd_buff[2] = 0x0D;	
	
	_cmd_buff[3] = CMD_SET_BAUD;	
	
	_cmd_buff[4] = (baud >> 24) & 0xFF;
	_cmd_buff[5] = (baud >> 16) & 0xFF;
	_cmd_buff[6] = (baud >> 8) & 0xFF;
	_cmd_buff[7] = baud & 0xFF;
	
	_cmd_buff[8] = FRAME_E0;
	_cmd_buff[9] = FRAME_E1;
	_cmd_buff[10] = FRAME_E2;
	_cmd_buff[11] = FRAME_E3;	
	_cmd_buff[12] = _verify(_cmd_buff, 12);
	
	_putchars(_cmd_buff, 13);	
	
	wait_ms(10);	
	uart.baud(baud);
}
